# CAV_Simulator

./: README.md
env_setup/: 1_docker_run.sh  2_build_all.sh  3_network_setup.sh  4_launch_all_control_nodes.sh  5_teardown.sh  config.sh
map_generation/RGBtoMap/: RGBtoGreyscale.py  readme.md
measure/: 100ms.csv  10ms.csv  200ms.csv  20ms.csv  300ms.csv  30ms.csv  40ms.csv  measure_Sat_Aug__3_11_48_21_2024.csv  measure_Sat_Aug__3_11_50_06_2024.csv  measure_Sat_Aug__3_11_51_39_2024.csv  measure_Sat_Aug__3_11_53_11_2024.csv  measure_Sun_Aug__4_15_55_33_2024.csv  measure_Sun_Aug__4_16_13_16_2024.csv  measure_Sun_Aug__4_16_16_44_2024.csv  measure_Sun_Aug__4_16_19_22_2024.csv  measure_Sun_Aug__4_17_27_24_2024.csv  measure_Tue_Aug_13_18_29_30_2024.csv  measure_Tue_Aug_20_10:19:36_2024.csv
ns3_scripts/: tap_sim.cc
src/auxiliary/: CMakeLists.txt  package.xml
src/auxiliary/include/auxiliary/: FileHandler.hpp  WaypointDisplayer.hpp  WaypointRecorder.hpp
src/auxiliary/src/: FileHandler.cpp  WaypointDisplayer.cpp  WaypointDisplayer_main.cpp  WaypointRecorder.cpp  WaypointRecorder_main.cpp
src/debug_cpp/: CMakeLists.txt  package.xml
src/f1tenth_gym_ros/: Dockerfile  package.xml
src/gap_follow/: CMakeLists.txt  package.xml
src/measure/: CMakeLists.txt  package.xml
src/motion_planning/: CMakeLists.txt  package.xml
src/pure_pursuit/: CMakeLists.txt  package.xml
src/safety_node/: CMakeLists.txt  package.xml
src/sim_control/: CMakeLists.txt  package.xml
src/wall_follow/: CMakeLists.txt  package.xml
waypoint/Spielberg_map/: anticlockwise_waypoints_0.0s_Fri_Jun_21_10:09:43_2024.csv  anticlockwise_waypoints_0.0s_Fri_Jun_21_10_09_43_2024.csv  clockwise_waypoints_0.0s_Fri_Jun_21_10:09:43_2024.csv  clockwise_waypoints_0.0s_Fri_Jun_21_10_09_43_2024.csv  (+1 more)
(+51 files in other folders)
